# dhc-robust-mapf

./: README.md  config.yaml  pyproject.toml
pathfinding/: environment.py  movingai.py  utils.py
pathfinding/models/dhc/: __init__.py  evaluate.py  model.py  train.py  visualize.py  worker.py
pathfinding/test_cases/: 128length_32agents_0.3372density.pkl  32length_32agents_0.334density.pkl  40length_64agents_0.3density.pkl  Berlin_0_256.map_Berlin_0_256.map.scen_1agents_.pkl  den520d.map_den520d-even-1.scen_1agents_.pkl  den520d.map_den520d-even-1.scen_4agents_.pkl  ht_chantry.map_ht_chantry-even-1.scen_32agents_.pkl  ht_chantry.map_ht_chantry-even-1.scen_64agents_.pkl  lak303d.map_lak303d-even-1.scen_1agents_.pkl  lak303d.map_lak303d-even-1.scen_64agents_.pkl  maze-128-128-2.map_maze-128-128-2-random-1.scen_32agents_.pkl  room-32-32-4.map_room-32-32-4-random-1.scen_32agents_.pkl  small-3-rooms-dense.map_small-12-dense.scen_12agents_.pkl  small-3-rooms-dense2.map_small-12-dense.scen_12agents_.pkl  small-3-rooms.map_small-12.scen_12agents_.pkl  small.map_small-4.scen_4agents_.pkl  small.map_small-8-reversed.scen_8agents_.pkl  small.map_small-8.scen_8agents_.pkl
tests/: test_imports.py
